# koshka2-rs

./: .gitignore  Cargo.toml  FUTURE  README.md  ball  cpu2.rs  debug.rs  fpu.rs  main.rs  mod.rs  paging.rs  state.rs  u24.rs  video2.rs
asm/: asm2.rs  isa2.rs  mod.rs
asmdemo/: main.asm
ia2/: ia2.rs  iat.rs  mod.rs
