[package]
name = "koshka2-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
half = "2.7.1"
# No more `ux`!
# ux = "0.1.6"

[[bin]]
name = "koshka2"
path = "main.rs"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "thin"
